deployments/epp/prod/api-dummy/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-dummy
  namespace: epp--prod
spec:
  selector:
    app: api-dummy
  ports:
  - port: 8080
